# Workshop-ROS2

./: LICENSE  README.md
drone_control/: package.xml  setup.py
drone_control/config/: config.yaml
drone_control/drone_control/: drone_controller.py  drone_controller_node.py
drone_control/launch/: control.launch.py
drone_gui/: package.xml  setup.cfg  setup.py
drone_gui/drone_gui/: drone_gui_node.py  drone_window.py
drone_gui/launch/: gui.launch.py
drone_launch/: CMakeLists.txt  package.xml
drone_launch/launch/: simulation.launch.py
drone_msgs/: CMakeLists.txt  package.xml
drone_msgs/msg/: Control.msg  WaypointReference.msg
drone_simulation/: package.xml  setup.py
drone_simulation/config/: config.yaml
drone_simulation/drone_simulation/: drone_simulation_node.py  drone_simulator.py
drone_simulation/launch/: simulation.launch.py
