<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_simulation</name>
  <version>1.0.0</version>
  <description>2D drone simulator</description>
  <maintainer email="mjacinto@isr.tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>drone_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
